# rust

./: README.md  account_info.json  hyperliquid_test_signal.py  hyperliquid_trader.py  run_optimized_trader.ps1  start_both_traders.ps1  start_trading_system.ps1  start_trading_system.sh  stop_trading_system.ps1  stop_trading_system.sh  trading_command.ps1  trading_command.py
crypto_backtest/: Cargo.toml  assets.json  btc_debug_params_1.txt  btc_debug_params_2.txt  btc_debug_params_3.txt  btc_limit_test_results.json  btc_limit_test_trades.csv  btc_manual_check.txt  btc_manual_check_fixed.txt  btc_optimization_summary.csv  btc_trade_check.txt  btc_trade_check_fixed.txt  notes.txt  optimization_config.json  optimization_results.csv  run_influx_backtest.ps1  test_strategy.rs
crypto_backtest/config/: backtest.json  default.json
crypto_backtest/results/: equity_curve.csv  metrics.json  report.txt  summary_report.csv  trades.csv
crypto_backtest/results/AAVE/: AAVE_metrics.json  AAVE_optimization_results.csv  AAVE_optimization_results.json  AAVE_trades.csv
crypto_backtest/results/APT/: APT_metrics.json  APT_optimization_results.csv  APT_optimization_results.json  APT_trades.csv
crypto_backtest/results/AVAX/: AVAX_metrics.json  AVAX_optimization_results.csv  AVAX_optimization_results.json  AVAX_trades.csv
crypto_backtest/results/BCH/: BCH_metrics.json  BCH_optimization_results.csv  BCH_optimization_results.json  BCH_trades.csv
crypto_backtest/results/BNB/: BNB_metrics.json  BNB_optimization_results.csv  BNB_optimization_results.json  BNB_trades.csv
crypto_backtest/results/BTC/: BTC_metrics.json  BTC_optimization_results.csv  BTC_optimization_results.json  BTC_trades.csv
crypto_backtest/results/BTC_small/: BTC_small_optimization_results.json
crypto_backtest/results/CRV/: CRV_metrics.json  CRV_optimization_results.csv  CRV_optimization_results.json  CRV_trades.csv
crypto_backtest/results/DOGE/: DOGE_metrics.json  DOGE_optimization_results.csv  DOGE_optimization_results.json  DOGE_trades.csv
crypto_backtest/results/DOT/: DOT_metrics.json  DOT_optimization_results.csv  DOT_optimization_results.json  DOT_trades.csv
crypto_backtest/results/ENS/: ENS_metrics.json  ENS_optimization_results.csv  ENS_optimization_results.json  ENS_trades.csv
crypto_backtest/results/ETH/: ETH_metrics.json  ETH_optimization_results.csv  ETH_optimization_results.json  ETH_trades.csv
crypto_backtest/results/FTM/: FTM_optimization_results.csv  FTM_optimization_results.json
crypto_backtest/results/INJ/: INJ_metrics.json  INJ_optimization_results.csv  INJ_optimization_results.json  INJ_trades.csv
crypto_backtest/results/LDO/: LDO_metrics.json  LDO_optimization_results.csv  LDO_optimization_results.json  LDO_trades.csv
crypto_backtest/results/LINK/: LINK_metrics.json  LINK_optimization_results.csv  LINK_optimization_results.json  LINK_trades.csv
crypto_backtest/results/MKR/: MKR_metrics.json  MKR_optimization_results.csv  MKR_optimization_results.json  MKR_trades.csv
crypto_backtest/results/OP/: OP_metrics.json  OP_optimization_results.csv  OP_optimization_results.json  (+1 more)
crypto_backtest/scripts/: fetch_candles.py
crypto_backtest/src/: backtest.rs  config.rs  fetch_data.rs  influx.rs  lib.rs  main.rs  optimizer.rs  stats.rs
crypto_backtest/tests/: intergration_tests.rs  pivot_signal_test.rs
rust_trader/: .env  Cargo.toml  signal_generator_stats.json
rust_trader/config/: trader.toml
rust_trader/signals/: AVAX_SHORT_1747351143338_9ef0d0be.json  DOGE_SHORT_1747349135372_206109b2.json  ENS_LONG_1747349135914_17a39bf5.json  INJ_LONG_1747349135842_b786b6b2.json  TIA_LONG_1747349135726_b7f5d779.json  XRP_SHORT_1747349135785_ca3e41e4.json  XRP_SHORT_1747354025802_47d92c98.json
rust_trader/src/: lib.rs
(+2736 files in other folders)
