[package]
name = "crypto_backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
env_logger = "0.9"
log = "0.4"
csv = "1.1"
rayon = "1.7"
thiserror = "1.0"
ndarray = "0.15"
influxdb = { version = "0.7.2", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[[bin]]
name = "run_backtest"
path = "src/bin/run_backtest.rs"

[[bin]]
name = "prepare_data"
path = "src/bin/prepare_data.rs"

[[bin]]
name = "optimize_fibonacci"
path = "src/bin/optimize_fibonacci.rs"

[[bin]]
name = "debug_optimizer"
path = "src/bin/debug_optimizer.rs"

[[bin]]
name = "debug_strategy"
path = "src/bin/debug_strategy.rs"

[[bin]]
name = "influx_fetcher"
path = "src/bin/influx_fetcher.rs"