[package]
name = "rust_trader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
url = "2.3"
itertools = "0.11"
clap = { version = "4.3", features = ["derive"] }

# For InfluxDB connectivity
influxdb2 = "0.4"
influxdb2-structmap = "0.2"

# For statistics and number handling
num = "0.4"
statrs = "0.16"
rand = "0.8"

[[bin]]
name = "trader"
path = "src/bin/trader.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "signal_generator"
path = "src/bin/signal_generator.rs"

[lib]
name = "rust_trader"
path = "src/lib.rs"